[MacViews] Fix Cocoa Scrollbar Thumb Highlight

The Cocoa legacy style scrollbar thumb should highlight
when the scrollbar track is highlighted.

Bug: 792373
Change-Id: Ie64818ded49e8391dbc61c93e66fe67ca85fdcb7