ui/views/controls/scrollbar/cocoa_scroll_bar.mm
@@ -68,6 +68,8 @@ class CocoaScrollBarThumb : public BaseScrollBarThumb {
   // Returns true if the thumb is in pressed state.
   bool IsStatePressed() const;
 
+  void SetIsMouseOverTrack(bool mouse_over_track);
+
  protected:
   // View:
   gfx::Size CalculatePreferredSize() const override;
@@ -102,6 +104,10 @@ bool CocoaScrollBarThumb::IsStateHovered() const {
 
 bool CocoaScrollBarThumb::IsStatePressed() const {
   return GetState() == Button::STATE_PRESSED;
+}
+
+void CocoaScrollBarThumb::SetIsMouseOverTrack(bool mouse_over_track) {
+  SetState(mouse_over_track ? Button::STATE_HOVERED : Button::STATE_NORMAL);
 }
 
 gfx::Size CocoaScrollBarThumb::CalculatePreferredSize() const {
@@ -286,7 +292,9 @@ void CocoaScrollBar::OnMouseReleased(const ui::MouseEvent& event) {
 }
 
 void CocoaScrollBar::OnMouseEntered(const ui::MouseEvent& event) {
-  if (scroller_style_ != NSScrollerStyleOverlay)
+  GetCocoaScrollBarThumb()->SetIsMouseOverTrack(true);
+
+  if (scroller_style_ == NSScrollerStyleLegacy)
     return;
 
   // If the scrollbar thumb did not completely fade away, then reshow it when
@@ -310,6 +318,7 @@ void CocoaScrollBar::OnMouseEntered(const ui::MouseEvent& event) {
 }
 
 void CocoaScrollBar::OnMouseExited(const ui::MouseEvent& event) {
+  GetCocoaScrollBarThumb()->SetIsMouseOverTrack(false);
   ResetOverlayScrollbar();
 }
 
